fix: main menù without padding and no overflow hidden on main...

--- a/_sass/_designers-italia.scss
+++ b/_sass/_designers-italia.scss
@@ -142,7 +142,7 @@ html {
 }
 
 #main {
-  overflow: hidden;
+  /*overflow: hidden;*/
 
   .project-title-wrapper {
     position: relative;
@@ -362,7 +362,7 @@ html {
 }
 
 .Megamenu--default {
-  margin-left: -3.2rem !important;
+  /*margin-left: -3.2rem !important;
   margin-right: -3.2rem !important;
 
   .Megamenu-list {
@@ -370,7 +370,10 @@ html {
       margin-right: 1.2rem !important;
       margin-left: 1.2rem !important;
     }
-  }
+  }*/
+
+  padding-left: 0!important;
+  padding-right: 0!important;
 
   .Megamenu-item {
     > a {
